Improve SonarLint integration test